2013-03-31 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Update manual.
	* src/SDCCmain.c:
	  Deprecation warning for --small-is-8bits.
	* device/include/assert.h:
	  Prepare for static assertions.
	* src/SDCCast.h:
	  Fix warning.

2013-03-30 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Update and reorganize manual.
	* src/izt:
	  Kill i186 and tcls900h ports.

2013-03-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.lex,
	  src/SDCCast.c,
	  src/SDCCast.h,
	  src/SDCC.y,
	  device/include/stdalign.h,
	  device/include/stddef.h,
	  device/include/stdnoreturn.h,
	  support/regression/tests/align.c:
	  Support for C11 _Alignof operator.

2013-03-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Use mlt for multiplication by constant in z180 port.
	* src/SDCCralloc.hpp:
	  Add comment to reference the paper on the register allocator.

2013-03-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix bug #2145.

2013-03-18 Borut Razem <borut.razem AT gmail.com>

	* support/scripts/gen_known_bugs.pl: use http instead https since the
	  LWP::Protocol::https perl module seems not to be installed by default

2013-03-16 Molnar Karoly <molnarkaroly AT users.sf.net>

	* device/include/pic14/pic14devices.txt,
	  device/non-free/include/pic14/pic16f1788.h,
	  device/non-free/include/pic14/pic16f1789.h,
	  device/non-free/lib/pic14/libdev/Makefile.in,
	  device/non-free/lib/pic14/libdev/devices.txt,
	  device/non-free/lib/pic14/libdev/pic16f1788.c,
	  device/non-free/lib/pic14/libdev/pic16f1789.c,
	  doc/sdccman.lyx:
	  New devices: PIC16F1788, PIC16F1789

2013-03-15 Borut Razem <borut.razem AT gmail.com>

	* support/scripts/gen_known_bugs.pl: adapted for Allura bug tracker

2013-03-14 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c:
	  Fix bug #2142 (ld is fixed, upper case still open).

2013-03-12 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: